--- a/Labs/01 - Analysis and Visualisation.ipynb
+++ b/Labs/01 - Analysis and Visualisation.ipynb
@@ -44,11 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fivosts/miniconda3/envs/py3iaml/lib/python3.7/site-packages/sklearn/utils/__init__.py:4: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working\n",
+      "  from collections import Sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Import packages\n",
     "import os\n",
@@ -88,10 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset\n",
@@ -108,11 +113,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word_freq_make</th>\n",
+       "      <th>word_freq_address</th>\n",
+       "      <th>word_freq_all</th>\n",
+       "      <th>word_freq_3d</th>\n",
+       "      <th>word_freq_our</th>\n",
+       "      <th>word_freq_over</th>\n",
+       "      <th>word_freq_remove</th>\n",
+       "      <th>word_freq_internet</th>\n",
+       "      <th>word_freq_order</th>\n",
+       "      <th>word_freq_mail</th>\n",
+       "      <th>...</th>\n",
+       "      <th>char_freq_;</th>\n",
+       "      <th>char_freq_(</th>\n",
+       "      <th>char_freq_[</th>\n",
+       "      <th>char_freq_!</th>\n",
+       "      <th>char_freq_$</th>\n",
+       "      <th>char_freq_#</th>\n",
+       "      <th>capital_run_length_average</th>\n",
+       "      <th>capital_run_length_longest</th>\n",
+       "      <th>capital_run_length_total</th>\n",
+       "      <th>is_spam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.778</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.756</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>278.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.132</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>0.180</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>5.114</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>1028.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.143</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.276</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>9.821</td>\n",
+       "      <td>485.0</td>\n",
+       "      <td>2259.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.537</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.537</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 58 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   word_freq_make  word_freq_address  word_freq_all  word_freq_3d  \\\n",
+       "0            0.00               0.64           0.64           0.0   \n",
+       "1            0.21               0.28           0.50           0.0   \n",
+       "2            0.06               0.00           0.71           0.0   \n",
+       "3            0.00               0.00           0.00           0.0   \n",
+       "4            0.00               0.00           0.00           0.0   \n",
+       "\n",
+       "   word_freq_our  word_freq_over  word_freq_remove  word_freq_internet  \\\n",
+       "0           0.32            0.00              0.00                0.00   \n",
+       "1           0.14            0.28              0.21                0.07   \n",
+       "2           1.23            0.19              0.19                0.12   \n",
+       "3           0.63            0.00              0.31                0.63   \n",
+       "4           0.63            0.00              0.31                0.63   \n",
+       "\n",
+       "   word_freq_order  word_freq_mail   ...     char_freq_;  char_freq_(  \\\n",
+       "0             0.00            0.00   ...            0.00        0.000   \n",
+       "1             0.00            0.94   ...            0.00        0.132   \n",
+       "2             0.64            0.25   ...            0.01        0.143   \n",
+       "3             0.31            0.63   ...            0.00        0.137   \n",
+       "4             0.31            0.63   ...            0.00        0.135   \n",
+       "\n",
+       "   char_freq_[  char_freq_!  char_freq_$  char_freq_#  \\\n",
+       "0          0.0        0.778        0.000        0.000   \n",
+       "1          0.0        0.372        0.180        0.048   \n",
+       "2          0.0        0.276        0.184        0.010   \n",
+       "3          0.0        0.137        0.000        0.000   \n",
+       "4          0.0        0.135        0.000        0.000   \n",
+       "\n",
+       "   capital_run_length_average  capital_run_length_longest  \\\n",
+       "0                       3.756                        61.0   \n",
+       "1                       5.114                       101.0   \n",
+       "2                       9.821                       485.0   \n",
+       "3                       3.537                        40.0   \n",
+       "4                       3.537                        40.0   \n",
+       "\n",
+       "   capital_run_length_total  is_spam  \n",
+       "0                     278.0      1.0  \n",
+       "1                    1028.0      1.0  \n",
+       "2                    2259.0      1.0  \n",
+       "3                     191.0      1.0  \n",
+       "4                     191.0      1.0  \n",
+       "\n",
+       "[5 rows x 58 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spambase.head(5) # Display the 5 first rows of the dataframe"
    ]
@@ -133,13 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Code goes here:"
+    "# print(spambase.shape[1])\n",
+    "print(len(spambase.columns))"
    ]
   },
   {
@@ -151,13 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4601\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your Code goes here:"
+    "print(len(spambase.index))"
    ]
   },
   {
@@ -174,9 +411,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Your Code goes here:"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -421,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the transformed dataset, we now wish to train a Na\u00efve Bayes classifier to distinguish spam from regular email by fitting a distribution of the number of occurrences of each word for all the spam and non-spam e-mails. Read about the [Naive Bayes classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier) and the underlying assumption if you are not already familiar with it. In this lab we focus on the [Multinomial Naive Bayes classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier#Multinomial_naive_Bayes). \n",
+    "Given the transformed dataset, we now wish to train a Naïve Bayes classifier to distinguish spam from regular email by fitting a distribution of the number of occurrences of each word for all the spam and non-spam e-mails. Read about the [Naive Bayes classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier) and the underlying assumption if you are not already familiar with it. In this lab we focus on the [Multinomial Naive Bayes classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier#Multinomial_naive_Bayes). \n",
     "\n",
     "We will make use of the `MultinomialNB` class in `sklearn`. **Check out the user guide [description](http://scikit-learn.org/0.19/modules/naive_bayes.html#multinomial-naive-bayes) and [documentation](http://scikit-learn.org/0.19/modules/generated/sklearn.naive_bayes.MultinomialNB.html#sklearn.naive_bayes.MultinomialNB) to familiarise yourself with this class.**"
    ]
@@ -759,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the final part of this section we will now pretend we are spammers wishing to fool a spam checking system based on Na\u00efve Bayes into classifying a spam e-mail as ham (i.e. a valid e-mail). For this we will use a test set consisting of just one data point (i.e. e-mail). This tiny dataset is called `spambase_test` and has already been pre-processed for you which means that the redundant attributes have been removed and word frequencies have been replaced by word presence/absence."
+    "For the final part of this section we will now pretend we are spammers wishing to fool a spam checking system based on Naïve Bayes into classifying a spam e-mail as ham (i.e. a valid e-mail). For this we will use a test set consisting of just one data point (i.e. e-mail). This tiny dataset is called `spambase_test` and has already been pre-processed for you which means that the redundant attributes have been removed and word frequencies have been replaced by word presence/absence."
    ]
   },
   {
@@ -919,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
